# litterbox

./: .gitignore  LICENSE  README.md  README.zh.md  vercel.json
dashboard/: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/components/: ApiTokenSettings.tsx  CreateExposeDialog.tsx  CreateSandboxDialog.tsx  ErrorAlert.tsx  ExecCommandDialog.tsx  ExposeList.tsx  LanguageToggle.tsx  Layout.tsx  PoolStateBadge.tsx  SandboxFilters.tsx  SandboxStatusBadge.tsx  (+3 more)
docs/: api-reference.md  configuration.md  development.md
orchestrator/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  Makefile1  README.md  README.zh.md  docker-compose.yml  pyproject.toml
orchestrator/docker/: entrypoint.sh  healthcheck.sh
orchestrator/src/orchestrator/: auth.py  celery_app.py  config.py  container.py  deps.py  main.py  responses.py  tasks.py  utils.py  worker_profiles.py  worker_runner.py
orchestrator/src/orchestrator/domain/: models.py
orchestrator/src/orchestrator/infra/: kubernetes.py  repositories.py  ttl_queue.py
orchestrator/src/orchestrator/routes/: exposes.py  metrics.py  pools.py  sandboxes.py  templates.py  webhooks.py  ws.py
orchestrator/src/orchestrator/services/: exposes.py  metrics.py  pools.py  sandboxes.py  templates.py  ttl.py  webhooks.py  workspace.py
orchestrator/tests/: test_api_bearer_auth.py  test_kubernetes_gateway.py  test_sandbox_env_overrides.py  test_sandbox_lifecycle.py  test_webhooks_logging.py
orchestrator/tests/integration/: test_api.py
(+19 files in other folders)
