[project]
name = "orchestrator"
version = "0.1.0"
description = "Python orchestrator for Litterbox sandboxes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4.0,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "kubernetes>=31.0.0,<33.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "pyyaml>=6.0.2,<7.0.0",
  "prometheus-client>=0.21.0,<1.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
  "websockets>=15.0,<16.0",
]

[project.optional-dependencies]
dev = [
  "asgi-lifespan>=2.1.0,<3.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
